# kimsfinance

./: .gitignore  ARCHITECTURE_ANALYSIS.md  AROON_IMPLEMENTATION_REPORT.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_SMELL_ANALYSIS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_REPORT_178x.md  FREE_THREADING_IMPLEMENTATION.md  HARDWARE_INFO.md  HOLLOW_CANDLES_SVG_COMPLETION.md  LICENSING.md  LINE_CHART_SVG_IMPLEMENTATION.md  MANIFEST.in  MEMORY_ANALYSIS_SUMMARY.txt  MEMORY_FIXES_CHECKLIST.md  PERFORMANCE_OPPORTUNITIES.md  PNF_SVG_IMPLEMENTATION_REPORT.md  POLARS_PYTHON_314_COMPATIBILITY.md  PRINT_STATEMENT_CLEANUP_REPORT.md  PYTHON_3.14_BENCHMARK_RESULTS.md  PYTHON_3.14_OPTIMIZATION_OPPORTUNITIES.md  PYTHON_3.14_OPTIMIZATION_STRATEGY.md  PYTHON_3.14_SUMMARY.md  README.md  README_THREAD_SAFETY.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  SVG_EXPORT_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_GAPS.md  THREAD_SAFETY_ANALYSIS.md  TSI_COMPLETION_REPORT.md  demo_aroon.py  demo_hollow_svg.py  demo_line_svg.py  layout_constants_completion_report.md  (+3 more)
benchmarks/: AUTOTUNE_COMPREHENSIVE_RESULTS.txt  AUTOTUNE_RESULTS.txt  BENCHMARK_RESULTS_WITH_COMPARISON.md  GPU_INDICATOR_BENCHMARK_RESULTS.txt  PREALLOCATION_BENCHMARK_RESULTS.txt  benchmark_batch_drawing.py  benchmark_numba_jit.py  benchmark_parallel_rendering.py  benchmark_plotting.py  benchmark_polars_gpu.py  benchmark_python_314.py  benchmark_speed_modes.py  compare_moving_averages.py  standard_benchmark.py  test_comparison_results.md
docs/: API.md  CODE_QUALITY_REMAINING.md  COMPLETE_AGGREGATION_SUMMARY.md  DATA_LOADING.md  GPU_OPTIMIZATION.md  IMPLEMENTATION_COMPLETE.md  INDICATOR_IMPLEMENTATION_COMPLETE.md  INDICATOR_IMPLEMENTATION_PLAN.md  MIGRATION.md  MIGRATION_GUIDE.md  OUTPUT_FORMATS.md  PERFORMANCE.md  PREALLOCATION_OPTIMIZATION.md  PYPI_QUICK_REFERENCE.md  PYPI_RELEASE_CHECKLIST.md  PYTHON_314.md  README.md  README_POLISH_COMPLETION.md  RSI_TEST_COMPLETION_REPORT.md  SHARED_INDICATOR_ARCHITECTURE.md  SVG_EXPORT.md  SVG_EXPORT_COMPLETE.md  TICK_CHARTS.md  TICK_IMPLEMENTATION_SUMMARY.md  cmf_implementation_report.md
examples/: README.md  demo_aroon.py
kimsfinance/: POLARS_MIGRATION.md  __init__.py
research/: missing_indicators_research.md
scripts/: benchmark_gpu_indicators.py  benchmark_preallocation.py  benchmark_renderer_optimization.py  benchmark_roc_aroon_optimization.py  chart_gap_analysis.md  demo_svg_export.py  demo_tick_charts.py  generate_experimental_indicators.py  generate_indicator_charts.py  generate_sample_charts.py  generate_tier1_indicators.py  gpu_advanced_test.py  gpu_validation_test.py  regenerate_all_samples.py  run_autotune.py  run_autotune_comprehensive.py  validate_python314_freethreading.py  visual_verification_optimized.py
tests/: benchmark_ohlc_bars.py  test_adx.py  test_all_operations.py  test_api_native_routing.py  test_atr.py  test_batch_indicators.py  test_dema_tema.py  test_donchian_channels.py  test_engine_selection.py  test_fibonacci_retracement.py  test_hollow_candles_svg.py  test_ichimoku.py  test_indicators.py  test_keltner_channels.py  test_memory_leaks.py  test_mfi.py  test_moving_averages.py  test_numba_jit_compatibility.py  test_phase1_integration.py  test_picks.py  test_pivot_points.py  test_plotting.py  test_polars_gpu_engine.py  test_renderer_hollow.py  (+15 more)
(+165 files in other folders)
